[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "no-asyncio-nats"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dynamic = ["version"]

[tool.maturin]
features = [
    "pyo3/abi3-py311",
    "pyo3/extension-module"
]
